--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Data and data transformation
+Data Cleaning and Transformation
 
 Data: Human Activity Recognition Using Smartphones Dataset
 Version 1.0
